<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrangBacSi.Fragment.BacSi_ChiTiet_QuanLyHoSoBenhNhan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorDefault"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDefault"
            android:gravity="center"
            android:text="@string/title_QuanLyBenhNhan"
            android:textColor="#ffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBack_BacSi_ChiTietQuanLyBenhNhan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left|center"
            android:background="@color/colorDefault"
            android:src="@drawable/ic_back" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/ScrollView_DangKy"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_HoTenBenhNhan"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtHoTenBenhNhan_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_SoDienThoai"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtSoLienLac_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_Email"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtEmail_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_DiaChi"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtDiaChi_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_TuoiBenhNhan"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtTuoi_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_GioiTinh"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtGioiTinh_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_NgayGioDangKy"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtNgayGioDangKy_BacSi_ChiTietQuanLyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit3"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_LichSuKhamBenh"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                    <ListView
                        android:id="@+id/lvLichSuKhamBenh_BacSi_ChiTietQuanLyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/edit3"
                        android:listSelector="@color/colorListView" />


                <Button
                    android:id="@+id/btnThemLichSuKhamBenh_BacSi_ChiTietQuanLyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="40dp"
                    android:background="@drawable/edit2"
                    android:text="@string/title_ThemLichSuKhamBenh"
                    android:textColor="#ffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/txtChinhSuaHoSoBenhNhan_BacSi_ChiTietQuanLyBenhNhan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_ChinhSuaHoSoBenhNhan"
                        android:textColor="@color/colorBlack"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>