<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrangBenhNhan.Fragment.BenhNhan_ChiTiet_LichSuKhamBenh">

    <ScrollView
        android:id="@+id/ScrollView_DangKy"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_TenBacSi"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtTenBacSi_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_Khoa"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtKhoa_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_ThanhToan"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtThanhToan_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_ThoiGianDatLich"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtThoiGianDatLich_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_ThoiGianHenKham"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtThoiGianHenKham_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_TrangThai"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtTrangThai_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_HoatDong"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtHoatDong_BenhNhan_ChiTiet_LichSuKhamBenh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>